Documentación de la consulta de contratos del cliente . Documentacion de la consulta del contrato
